codigo limpo y fix the position!

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,13 @@
     <script src="script.js" type="module"></script>
 </head>
 <body>
-    <div class="main-container">
+    <div class="grid">
         <!-- Planta amarilla -->
         <section class="container-planta-amarilla">
             <div class="strike">
-                <img src="./images/planta_amarilla/sprite.png" alt="plant"> 
             </div>
         </section>
-        <!--  -->
-
+        
     </div>
 </body>
 </html>
